Fix input line-height on Safari

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer components {
     .input {
-        @apply h-7 w-28 p-0.5 z-10
+        @apply h-7 w-28 p-0.5 z-10 leading-normal
         border border-amber-500 rounded-lg focus:ring-1 focus:ring-sky-500 focus:border-sky-500 focus:outline-none
         bg-gray-100
         dark:bg-gray-900;
